--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap');
+
 :root {
 	--primary-light: #e2e8f0;
   --primary-dark: #0f172a;
@@ -18,14 +20,204 @@ body {
     #0b111d,
     #080e18,
     #050a12,
-    #030509
+    #030509,
+    #131E38,
+    #20DC49,
+
   );
 }
 
 .games-panel-container{
   border-radius: 0px;
-  background: #0f172a;
+  background: #131E38;
   box-shadow: -6px 6px 12px #0d1425, 6px -6px 12px #111a2f;
   color: var(--primary-light);
   text-shadow: 3px 5px 4px rgba(0, 0, 0, 0.33);
+}
+
+*
+{
+background: #131E38;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: 'Poppins', sans-serif;
+}
+section
+{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+section .imgBx
+{ 
+  position: relative;
+  width: 50%;
+  height: 100%;
+}
+section .imgBx:before
+{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+section .imgBx img
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+section .contentBx
+{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+}
+section .contentBx .formBx
+{
+   width: 50%;
+}
+section .contentBx .formBx h2
+{
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  border-bottom: 4px solid #20DC49;
+  display: inline-block;
+  letter-spacing: 1px;
+}
+section .contentBx .formBx .inputBx
+{
+  margin-bottom: 20px;
+}
+section .contentBx .formBx .inputBx span
+{
+font-size: 16px;
+margin-bottom: 5px;
+display: inline-block;
+color: #fff;
+font-weight: 300;
+letter-spacing: 1px;
+}
+section .contentBx .formBx .inputBx input
+{
+width: 100%;
+padding: 10px 20px;
+outline: none;
+font-weight: 400;
+border: 1px solid #fff;
+font-size: 16px;
+letter-spacing: 1px;
+color: #131E38;
+background: #fff;
+border-radius: 30px;
+}
+section .contentBx .formBx .inputBx input[type="submit"]
+{
+  background: #20DC49;
+  color: #131E38;
+  outline: none;
+  border: none;
+  font-weight: 500;
+  cursor: pointer;
+}
+section .contentBx .formBx .inputBx input[type="submit"]:hover
+{
+  background: #28bc48;
+}
+section .contentBx .formBx .remember
+{
+  margin-bottom: 10px;
+  color: #131E38;
+  font-weight: 400;
+  font-size: 14px;
+}
+section .contentBx .formBx .inputBx p
+{
+  color: #ffffff;
+}
+section .contentBx .formBx .inputBx p a
+{
+  color: #20DC49;
+}
+section .contentBx .formBx h3
+{
+  color: #20DC49;
+  text-align: center;
+  margin: 30px 0 10;
+  font-weight: 500;
+}
+section .contentBx .formBx .sci
+{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+section .contentBx .formBx .sci li
+{
+  list-style: none;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background:#fff;
+  border-radius: 50%;
+  margin: 0 7px;
+  cursor: pointer;
+}
+section .contentBx .formBx .sci li:hover
+{
+  background: #20DC49;
+}
+section .contentBx .formBx .sci li
+{
+  transform: scale(0.5);
+  filter: invert(1);
+}
+@media (max-width: 768px)
+{
+  section .imgBx
+  {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  section .contentBx
+  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+  section .contentBx .formBx
+  {
+    width: 100%;
+    padding: 40px;
+    background: rgb(255 255 255 / 0.9);
+    margin: 50px;
+  }
+  section .contentBx .formBx h3
+{
+  color: #20DC49;
+  text-align: center;
+  margin: 30px 0 10;
+  font-weight: 500;
+}
 }
