--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ section
   width: 100%;
   height: 100vh;
   display: flex;
+  font-size: 12px;
 }
 section .imgBx
 { 
@@ -99,7 +100,7 @@ section .contentBx .formBx h2
   border-bottom: 4px solid #20DC49;
   display: inline-block;
   letter-spacing: 1px;
-}
+ }
 section .contentBx .formBx .inputBx
 {
   margin-bottom: 20px;
@@ -144,12 +145,12 @@ section .contentBx .formBx .inputBx input[type="submit"]:hover
   background: #28bc48;
 }
 section .contentBx .formBx .remember
-{
+/* {
   margin-bottom: 10px;
   color: #fff;
   font-weight: 400;
   font-size: 14px;
-}
+} */
 section .contentBx .formBx .inputBx p
 {
   color: #ffffff;
@@ -157,11 +158,12 @@ section .contentBx .formBx .inputBx p
 section .contentBx .formBx .inputBx p a
 {
   color: #20DC49;
+  font-size: 12px;
 }
 section .contentBx .formBx .inputBx p b
 {
   color: #D93F21;
-}
+  }
 section .contentBx .formBx h3
 {
   color: #20DC49;
