star button, published behaviour

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ body {
   background-color: #182134;
 }
 
-.admin-menu-block{
+.admin-menu-block, .admin-aside-col{
   background-color: #192334;
 }
 
