--- a/styles/admin-styles.css
+++ b/styles/admin-styles.css
@@ -44,7 +44,7 @@ body {
 .admin-content-col{
   background-color: #212C3D;
 }
-.games-header-block{
+.games-header-block, .users-header-block{
   border-bottom: 1px solid white;
 }
 
