--- a/styles/log-reg.css
+++ b/styles/log-reg.css
@@ -12,19 +12,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #131E38;
+  background-image: url("http://cdn29.us1.fansshare.com/pictures/callofduty4modernwarfare/high-definition-wallpapers-modern-warfare-wallpaper-call-duty-devenderz-blog-wallpaper-wallpaper-717686672.jpg");
 } 
 
   .container {
     position: relative;
     max-width: 430px;
     width: 100%;
-    background: #fff;
+    background: #131E38;
     border-radius: 10px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     margin: 0 20px;
-
+    
   }
 
   .container .forms {
@@ -39,7 +39,7 @@ body {
   .container .form {
     width: 50%;
     padding: 30px;
-    background-color: #fff;
+    background-color: #131E38;
     transition: margin-left 0.18s ease;
   }
 
@@ -67,6 +67,7 @@ body {
     position: relative;
     font-size: 27px;
     font-weight: 600;
+    color: #fff;
   }
 
   .form .title::before {
@@ -76,7 +77,7 @@ body {
     bottom: 0;
     height: 3px;
     width: 30px;
-    background-color: #131E38;
+    background-color: #20DC49;
     border-radius: 25px;
   }
 
@@ -85,6 +86,7 @@ body {
     height: 50px;
     width: 100%;
     margin-top: 30px;
+    
   }
 
   .input-field input {
@@ -98,10 +100,11 @@ body {
     border-bottom: 2px solid #ccc;
     border-top: 2px solid transparent;
     transition: all 0.2s ease;
+    border-radius: 10px;
   }
 
   .input-field input:is(:focus, :valid) {
-    border-bottom-color: #0a6f20;
+    border-bottom-color: #20DC49;
   }
 
   .input-field i {
@@ -114,7 +117,7 @@ body {
   }
 
   .input-field input:is(:focus, :valid)~i {
-    color: #0a6f20;
+    color: #20DC49;
   }
 
   .input-field i.icon {
@@ -141,11 +144,11 @@ body {
 
   .checkbox-content input {
     margin: 0 8px -2px 4px;
-    accent-color: #131E38;
+    accent-color: #10c938;
   }
 
   .form .text {
-    color: #333;
+    color: #fff;
     font-size: 14px;
   }
 
@@ -169,13 +172,13 @@ body {
     font-weight: 500;
     letter-spacing: 1px;
     border-radius: 6px;
-    background-color:#0a6f20;
+    background-color: #2c9c45;
     cursor: pointer;
     transition: all 0.3s ease;
   }
 
   .button input:hover {
-    background-color: #34bb51;
+    background-color: #10c938;
   }
 
   .form .login-signup {
