--- a/styles/admin-styles.css
+++ b/styles/admin-styles.css
@@ -1,56 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Mina&display=swap');
+
 :root {
 	--primary-light: #e2e8f0;
   --primary-dark: #0f172a;
   --secondary-dark: #1e293b;
 }
 
-body {
-  background-image: linear-gradient(
-    to bottom,
-    #1e293b,
-    #1b2538,
-    #182234,
-    #161e31,
-    #131b2e,
-    #11192a,
-    #0f1727,
-    #0d1423,
-    #0b111d,
-    #080e18,
-    #050a12,
-    #030509
-  );
+
+/* GENERAL STYLES */
+
+header, footer{
+  font-family: 'Mina', sans-serif;
+  background-color: #202634;
 }
+
+main{
+  min-height: calc(100vh - 270px);
+  font-family: 'Mina', sans-serif;
+}
+
+body {
+  background-image: linear-gradient(to bottom, #161a24, #181b26, #191c27, #1b1e29, #1d1f2a);
+}
+
+/* NAVBAR STYLES */
+
+.navbar .active{
+  border-bottom: 1px solid #e2e8f0;
+  font-weight: bolder;
+}
+
 
 /* ADMIN SECTION STYLES */
 
 .admin-panel-container{
-  border-radius: 1px;
-  background: #0f172a;
-  box-shadow: -6px 6px 12px #0d1425, 6px -6px 12px #111a2f;
+  background-color: #202634;
+  border: 1px solid #232930;
+  box-shadow: 0px 0px 32px 0px rgba(41,48,55,0.25);
   color: var(--primary-light);
   text-shadow: 3px 5px 4px rgba(0, 0, 0, 0.33);
-  
 }
 
 .admin-info-block{
-  background-color: #182134;
+  background-color: #282C38;
 }
 
-.admin-menu-block, .admin-aside-col{
-  background-color: #192334;
+.admin-menu-block, .admin-aside-col, .modal-dialog-centered .modal-content{
+  background-color: #282C38;
 }
 
 .admin-content-col{
-  background-color: #212C3D;
-}
-.games-header-block, .users-header-block{
-  border-bottom: 1px solid white;
+  background-color: #202634;
 }
 
-.modal-dialog-centered .modal-content{
-  background-color: #192334;
-}
 
 
 
