--- a/styles/contact-styles.css
+++ b/styles/contact-styles.css
@@ -22,35 +22,19 @@ body {
   background-image: linear-gradient(to bottom, #161a24, #181b26, #191c27, #1b1e29, #1d1f2a);
 }
 
-main{
-  min-height: calc(100vh - 270px);
-}
-
-
 /* NAVBAR STYLES */
 
+.navbar .active{
+  border-bottom: 1px solid var(--primary-light);
+  font-weight: bolder;
+}
 
+/* CONTACT STYLES */
 
-/* ADMIN SECTION STYLES */
-
-.admin-panel-container{
+.contact-container{
+  background-color: var(--primary-dark);
   border: 1px solid var(--primary-gray);
   box-shadow: 0px 0px 32px 0px rgba(41,48,55,0.45);
   color: var(--primary-light);
   text-shadow: 3px 5px 4px rgba(0, 0, 0, 0.23);
 }
-
-.admin-aside-col, .modal-content{
-  background-color: var(--primary-gray);
-}
-
-.admin-content-col{
-  background-color: var(--primary-dark);
-}
-
-
-
-
-
-
-
