--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -1,3 +1,6 @@
+/********************/
+/* FONT AND COLORS */
+
 @import url('https://fonts.googleapis.com/css2?family=Mina&display=swap');
 
 :root {
@@ -8,43 +11,75 @@
 }
 
 
+/*******************/
 /* GENERAL STYLES */
 
 *{
   font-family: 'Mina', sans-serif;
-  color: var(--primary-light);
-}
-
-header, footer{
-  background-color: var(--secondary-dark)
 }
 
 body {
   background-image: linear-gradient(to bottom, #161a24, #181b26, #191c27, #1b1e29, #1d1f2a);
 }
 
-/* NAVBAR STYLES */
-
-.navbar .active{
-  border-bottom: 1px solid var(--primary-light);
-  font-weight: bolder;
-}
-
-/* GAME INFO STYLES */
-
-.caption-back{
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
-}
-
-.game-info-block, .game-info-container, .similar-games-container{
-  background-color: var(--primary-dark);
+.general-container{
   border: 1px solid var(--primary-gray);
   box-shadow: 0px 0px 32px 0px rgba(41,48,55,0.45);
   color: var(--primary-light);
   text-shadow: 3px 5px 4px rgba(0, 0, 0, 0.23);
 }
 
-.game-info-features, .game-card{
+
+/******************/
+/* NAVBAR STYLES */
+
+header, footer{
+  background-color: var(--secondary-dark)
+}
+
+.navbar .active{
+  border-bottom: 1px solid var(--primary-light);
+  font-weight: bolder;
+}
+
+
+/*********************/
+/* HOME PAGE STYLES */
+
+/* HERO SECTION STYLES */
+
+.caption-back{
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
+  color: var(--primary-light);
+}
+
+/* GAMES SECTION STYLES */
+
+.game-card{
+  background-color: var(--primary-gray);
+}
+
+
+/**********************/
+/* ADMIN PAGE STYLES */
+
+main{
+  min-height: calc(100vh - 270px);
+}
+
+.admin-aside-col, .modal-content{
+  background-color: var(--primary-gray);
+}
+
+.admin-content-col{
+  background-color: var(--primary-dark);
+}
+
+
+/**************************/
+/* GAME INFO PAGE STYLES */
+
+.game-info-features{
   background-color: var(--primary-gray);
   border: 2px solid var(--primary-dark);
   box-shadow: 0px 0px 32px 0px rgba(41,48,55,0.45);
@@ -65,3 +100,12 @@ body {
   width: 100%;
   height: 100%;
 }
+
+
+/**************************/
+/* 404 ERROR PAGE STYLES */
+
+.error-row{
+  min-height: calc(100vh - 223px);
+}
+
