--- a/styles/about-us-styles.css
+++ b/styles/about-us-styles.css
@@ -1,74 +1,73 @@
-:root{
-  --primaryDark:  #0F172A;
-  --primaryLight:#E2E8F0;
+:root {
+	--primaryDark: #0f172a;
+	--primaryLight: #e2e8f0;
 }
 
-body{
-  background-color:var(--primaryDark);
-  display: flex;
-  flex-direction: column;
-  color: var(--primaryLight);
-  font-family: 'Poppins', sans-serif;
+body {
+	background-color: var(--primaryDark);
+	display: flex;
+	flex-direction: column;
+	color: var(--primaryLight);
+	font-family: "Poppins", sans-serif;
 }
 
 /* container */
-main{
-  padding-top: 1rem;
-  padding-left: 2rem;
-  margin: 1rem;
+main {
+	padding-top: 1rem;
+	padding-left: 2rem;
+	margin: 1rem;
 }
 
-p{
-  font-size: 14px;
+p {
+	font-size: 14px;
 }
 
-.upperPart{
-  display: flex;
-  flex-direction: row;
+.upperPart {
+	display: flex;
+	flex-direction: row;
 }
 
-.upperPart .title{
-  padding-bottom: 1rem;
+.upperPart .title {
+	padding-bottom: 1rem;
 }
 
-.upperPart .image img{
-  height: 500px;
-  width: 384px;
+.upperPart .image img {
+	height: 500px;
+	width: 384px;
 }
 
 .lowerPart {
-  display:flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
-.lowerPart .nosotros{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+.lowerPart .nosotros {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
 }
 
-.lowerPart .nosotros .equipo{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.lowerPart .nosotros .equipo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.lowerPart .nosotros .equipo img{
-  border-radius: 100%;
-height: 150px;
-width: 140px;
+.lowerPart .nosotros .equipo img {
+	border-radius: 100%;
+	height: 150px;
+	width: 140px;
 }
 
-@media (max-width:750px){
-  main{
-    padding-left:  0px; 
-  }
-  .upperPart .image{
-    display: none;
-  }
-  .lowerPart .nosotros .equipo img{
-  height: 60px;
-  width: 50px;
-  
-  }
+@media (max-width: 750px) {
+	main {
+		padding-left: 0px;
+	}
+	.upperPart .image {
+		display: none;
+	}
+	.lowerPart .nosotros .equipo img {
+		height: 60px;
+		width: 50px;
+	}
 }
