--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -1,111 +1,116 @@
 /********************/
 /* FONT AND COLORS */
 
-@import url('https://fonts.googleapis.com/css2?family=Mina&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mina&display=swap");
 
 :root {
-	--primary-light: #E2E8F0;
-  --primary-gray: #252935;
-  --primary-dark: #1B202B;
-  --secondary-dark: #202634;
+	--primary-light: #e2e8f0;
+	--primary-gray: #252935;
+	--primary-dark: #1b202b;
+	--secondary-dark: #202634;
 }
-
 
 /******************/
 /* NAVBAR STYLES */
 
-header, footer{
-  background-color: var(--secondary-dark)
+header,
+footer {
+	background-color: var(--secondary-dark);
 }
 
-.navbar .active{
-  border-bottom: 1px solid var(--primary-light);
-  font-weight: bolder;
+.navbar .active {
+	border-bottom: 1px solid var(--primary-light);
+	font-weight: bolder;
 }
-
 
 /*******************/
 /* GENERAL STYLES */
 
-*{
-  font-family: 'Mina', sans-serif;
+* {
+	font-family: "Mina", sans-serif;
 }
 
 body {
-  background-image: linear-gradient(to bottom, #161a24, #181b26, #191c27, #1b1e29, #1d1f2a);
+	background-image: linear-gradient(
+		to bottom,
+		#161a24,
+		#181b26,
+		#191c27,
+		#1b1e29,
+		#1d1f2a
+	);
 }
 
-.general-container{
-  border: 1px solid var(--primary-gray);
-  box-shadow: 0px 0px 32px 0px rgba(41,48,55,0.45);
-  color: var(--primary-light);
-  text-shadow: 3px 5px 4px rgba(0, 0, 0, 0.23);
+.general-container {
+	border: 1px solid var(--primary-gray);
+	box-shadow: 0px 0px 32px 0px rgba(41, 48, 55, 0.45);
+	color: var(--primary-light);
+	text-shadow: 3px 5px 4px rgba(0, 0, 0, 0.23);
 }
-
 
 /*********************/
 /* HOME PAGE STYLES */
 
 /* HERO SECTION STYLES */
 
-.caption-back{
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
-  color: var(--primary-light);
+.caption-back {
+	background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
+	color: var(--primary-light);
 }
 
 /* GAMES SECTION STYLES */
 
-.game-card{
-  background-color: var(--primary-gray);
+.game-card {
+	background-color: var(--primary-gray);
 }
-
 
 /**********************/
 /* ADMIN PAGE STYLES */
 
-main{
-  min-height: calc(100vh - 270px);
+main {
+	min-height: calc(100vh - 270px);
 }
 
-.admin-aside-col, .modal-content{
-  background-color: var(--primary-gray);
+.admin-aside-col,
+.modal-content {
+	background-color: var(--primary-gray);
 }
 
-.admin-content-col{
-  background-color: var(--primary-dark);
+.admin-content-col {
+	background-color: var(--primary-dark);
 }
-
 
 /**************************/
 /* GAME INFO PAGE STYLES */
 
-.game-info-features{
-  background-color: var(--primary-gray);
-  border: 2px solid var(--primary-dark);
-  box-shadow: 0px 0px 32px 0px rgba(41,48,55,0.45);
+.game-info-features {
+	background-color: var(--primary-gray);
+	border: 2px solid var(--primary-dark);
+	box-shadow: 0px 0px 32px 0px rgba(41, 48, 55, 0.45);
 }
 
 .video-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  height: 0;
-  overflow: hidden;
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
 }
 
-.video-container iframe, .video-container object, .video-container embed {
-  position:absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.video-container iframe,
+.video-container object,
+.video-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
-
 
 /**************************/
 /* 404 ERROR PAGE STYLES */
 
-.access-row, .error-row{
-  min-height: calc(100vh - 223px);
+.access-row,
+.error-row {
+	min-height: calc(100vh - 223px);
 }
-
